tests/tooling/fixtures/native/execution/negative/while_identifier_reassigned_body_return_conservative_reject.objc3
module WhileIdentifierReassignedBodyReturnConservativeReject;

fn main() -> i32 {
  let gate = 1;
  gate = 0;
  while (gate) {
    return 42;
  }
}
